# ZCamPfcs

./: CMakeLists.txt  ScrewInfo.h  ZCamPfcs_pt_BR.ts  ZScreData.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  zcampfcs.ini  zcampfcs.qrc  zopenprotocol.cpp  zopenprotocol.h  zpfcsprotocol.cpp  zpfcsprotocol.h  zscrewdata.cpp  zscrewdata.h  zscrewdata.ui
